[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evidence_thoery"
version = "0.0.1"
authors = [{name = "Tianxiang Zhan", email = "zhantianxianguestc@hotmail.com"}]
description = "A python package of evidence theory"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
homepage = "https://github.com/ztxtech/evidence_theory"
repository = "https://github.com/ztxtech/evidence_theory.git"

# 如果有依赖项，可以在下面添加
#[project.dependencies]
#dependency-name = "^version"